data/derived/sp14/progs/unify/prog3380.ml.out
Characters 75-76:
  |(h::t) -> t::(listReverse t);;
             ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
